--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -34,7 +34,9 @@
     "\n",
     "``x_0`` = Punto dentro del dominio de la función del que se desean iniciar las interaciones\n",
     "\n",
-    "``tol`` = Tolerancia o aproximación minima que se desea de la raiz buscada"
+    "``tol`` = Tolerancia o aproximación minima que se desea de la raiz buscada\n",
+    "\n",
+    "El último valor del vector resultante será el valor más próximo a la raiz buscada"
    ]
   },
   {
@@ -158,7 +160,9 @@
     "\n",
     "``x_1`` = Punto dentro del dominio de la función del que se desean seguir con las interaciones\n",
     "\n",
-    "``tol`` = Tolerancia o aproximación minima que se desea de la raiz buscada"
+    "``tol`` = Tolerancia o aproximación minima que se desea de la raiz buscada\n",
+    "\n",
+    "El último valor del vector resultante será el valor más próximo a la raiz buscada"
    ]
   },
   {
