--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     " ## Método de Simpson para resolver integrales\n",
-    " Lo primero que tiene que hacer es entrar al siguiente link y llena las dos primeras columnas, es importante que pongas \"x\" y \"y\" en las dos primeras filas como encabezados, en la columna \"x\" anota los valores correspondientes a la \"x\" y en la columna \"y\" anota los valores correspondientes a cada imagen de \"x\""
+    "El siguiente código calcula integrales por el método de Simpson para datos equidistantes en x, sin importar el número de datos" 
+    "Lo primero que tiene que hacer es entrar al siguiente link y llena las dos primeras columnas, es importante que pongas \"x\" y \"y\" en las dos primeras filas como encabezados, en la columna \"x\" anota los valores correspondientes a la \"x\" y en la columna \"y\" anota los valores correspondientes a cada imagen de \"x\""
    ]
   },
   {
