--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "source": [
     " ## Método de Simpson para resolver integrales\n",
-    "El siguiente código calcula integrales por el método de Simpson para datos equidistantes en x, sin importar el número de datos" ,
-    "Lo primero que tiene que hacer es entrar al siguiente link y llena las dos primeras columnas, es importante que pongas \"x\" y \"y\" en las dos primeras filas como encabezados, en la columna \"x\" anota los valores correspondientes a la \"x\" y en la columna \"y\" anota los valores correspondientes a cada imagen de \"x\""
+    " El siguiente código calcula integrale spara puntos equidistantes en \"x\" por el método de Simpson.\n",
+    " Lo primero que tiene que hacer es entrar al siguiente link y llena las dos primeras columnas, es importante que pongas \"x\" y \"y\" en las dos primeras filas como encabezados, en la columna \"x\" anota los valores correspondientes a la \"x\" y en la columna \"y\" anota los valores correspondientes a cada imagen de \"x\""
    ]
   },
   {
@@ -44,126 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7e3ea704",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into 'C:/Users/eliez/Documents/R/win-library/3.6'\n",
-      "(as 'lib' is unspecified)\n",
-      "also installing the dependencies 'cli', 'lifecycle', 'pillar', 'rlang', 'tibble', 'tidyselect', 'vctrs'\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  There are binary versions available but the source versions are later:\n",
-      "           binary source needs_compilation\n",
-      "cli         2.5.0  3.6.1              TRUE\n",
-      "lifecycle   1.0.0  1.0.3             FALSE\n",
-      "pillar      1.6.0  1.9.0             FALSE\n",
-      "rlang      0.4.11  1.1.1              TRUE\n",
-      "tibble      3.1.1  3.2.1              TRUE\n",
-      "tidyselect  1.1.1  1.2.0             FALSE\n",
-      "vctrs       0.3.8  0.6.2              TRUE\n",
-      "dplyr       1.0.6  1.1.2              TRUE\n",
-      "\n",
-      "  Binaries will be installed\n",
-      "package 'cli' successfully unpacked and MD5 sums checked\n",
-      "package 'rlang' successfully unpacked and MD5 sums checked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"cannot remove prior installation of package 'rlang'\"Warning message in file.copy(savedcopy, lib, recursive = TRUE):\n",
-      "\"problema al copiar C:\\Users\\eliez\\Documents\\R\\win-library\\3.6\\00LOCK\\rlang\\libs\\x64\\rlang.dll  a C:\\Users\\eliez\\Documents\\R\\win-library\\3.6\\rlang\\libs\\x64\\rlang.dll: Permission denied\"Warning message:\n",
-      "\"restored 'rlang'\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'tibble' successfully unpacked and MD5 sums checked\n",
-      "package 'vctrs' successfully unpacked and MD5 sums checked\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"cannot remove prior installation of package 'vctrs'\"Warning message in file.copy(savedcopy, lib, recursive = TRUE):\n",
-      "\"problema al copiar C:\\Users\\eliez\\Documents\\R\\win-library\\3.6\\00LOCK\\vctrs\\libs\\x64\\vctrs.dll  a C:\\Users\\eliez\\Documents\\R\\win-library\\3.6\\vctrs\\libs\\x64\\vctrs.dll: Permission denied\"Warning message:\n",
-      "\"restored 'vctrs'\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'dplyr' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\eliez\\AppData\\Local\\Temp\\Rtmpw5eMHc\\downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "installing the source packages 'lifecycle', 'pillar', 'tidyselect'\n",
-      "\n",
-      "Warning message in install.packages(\"dplyr\"):\n",
-      "\"installation of package 'lifecycle' had non-zero exit status\"Warning message in install.packages(\"dplyr\"):\n",
-      "\"installation of package 'pillar' had non-zero exit status\"Warning message in install.packages(\"dplyr\"):\n",
-      "\"installation of package 'tidyselect' had non-zero exit status\""
-     ]
-    }
-   ],
-   "source": [
-    "install.packages(\"dplyr\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "12c72aa7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: dplyr\n",
-      "Warning message:\n",
-      "\"package 'dplyr' was built under R version 3.6.3\"Error: package or namespace load failed for 'dplyr' in loadNamespace(j <- i[[1L]], c(lib.loc, .libPaths()), versionCheck = vI[[j]]):\n",
-      " namespace 'pillar' 1.3.1 is being loaded, but >= 1.5.1 is required\n"
-     ]
-    }
-   ],
-   "source": [
-    "require(dplyr)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "0730363b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "library(dplyr)\n",
     "dta1<-read.csv(choose.files())\n",
-    "dtat<-as_tibble(dta)\n",
+    "dtat<-as_tibble(dta1)\n",
     "dta <- dtat %>% filter(x!=NA | x!=\"NA\") %>% select(x,y)\n",
     "dta <- (as.data.frame(dta))"
    ]
@@ -173,7 +61,7 @@
    "id": "38e26d71",
    "metadata": {},
    "source": [
-    "Una vez seleccionado el archivo siga corriendo la siguiente parte del código.|"
+    "Una vez seleccionado el archivo siga corriendo la siguiente parte del código."
    ]
   },
   {
